<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear_input_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/clear_fields"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_bathing_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/add_bathing_site"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/view_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/view_weather" />

    <item
        android:id="@+id/add_site_menu_setting_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_item" />
</menu>