<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddBathingSiteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/name_field"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.167"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/desc_field"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="@id/guideline"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.334"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/address_field"
                android:inputType="textPostalAddress"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="@id/guideline2"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.501"/>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.668"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <EditText
                android:id="@+id/latitude"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/latitude_field"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                app:layout_constraintEnd_toEndOf="@id/vGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline4"
                app:layout_constraintTop_toTopOf="@id/guideline3"/>

            <EditText
                android:id="@+id/longitude"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/longitude_field"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                app:layout_constraintStart_toEndOf="@id/vGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline4"
                app:layout_constraintTop_toTopOf="@id/guideline3"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.835"/>

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/grade_field"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline4"
                app:layout_constraintBottom_toTopOf="@id/rating"/>
            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:contentDescription="@string/rating_content_desc"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grade" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vGuideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.40"/>

            <EditText
                android:id="@+id/water_temp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/water_temp_field"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vGuideline2"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="2.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline5"/>

            <EditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/date_field"
                android:inputType="date"
                android:importantForAutofill="no"
                android:textColorHint="@color/input_field_hint_color"
                android:backgroundTint="@color/input_field_underline_color"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toEndOf="@id/vGuideline2"
                android:layout_marginStart="2.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline5"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/progressView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:padding="4dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineAmbientShadowColor="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/progressdialog_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/progress_dialog_text"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/progressBar"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>